--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "dev:tauri": "tauri dev",
-    "build:tauri": "tauri build"
+    "build:tauri": "tauri build",
+    "lint": "eslint src --max-warnings=10",
+    "test": "vitest run",
+    "test:ui": "vitest",
+    "gate": "npm run lint && npm run build && npm run test"
   },
   "dependencies": {
     "@tauri-apps/api": "^2",
@@ -16,10 +20,17 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/ui": "^4.0.18",
+    "jsdom": "^27.4.0",
     "typescript": "^5.0.0",
-    "vite": "^5.0.0"
+    "typescript-eslint": "^8.54.0",
+    "vite": "^5.0.0",
+    "vitest": "^4.0.18"
   }
 }
