--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint src --max-warnings=10",
     "test": "vitest run",
     "test:ui": "vitest",
-    "gate": "npm run lint && npm run build && npm run test"
+    "gate": "npm run lint && npm run build && npm run test",
+    "gate:report": "npm run gate 2>&1 | tee /dev/stderr"
   },
   "dependencies": {
     "@tauri-apps/api": "^2",
@@ -27,7 +28,15 @@
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/ui": "^4.0.18",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "jsdom": "^27.4.0",
+    "lucide-react": "^0.344.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss": "^3.4.0",
+    "postcss": "^8.4.0",
+    "autoprefixer": "^10.4.0",
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.54.0",
     "vite": "^5.0.0",
