--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.58.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@tauri-apps/cli": "^2",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -28,15 +30,14 @@
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/ui": "^4.0.18",
+    "autoprefixer": "^10.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "jsdom": "^27.4.0",
     "lucide-react": "^0.344.0",
-    "@radix-ui/react-slot": "^1.0.2",
+    "postcss": "^8.4.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.0",
-    "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0",
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.54.0",
     "vite": "^5.0.0",
