feat: Add Settings UI and README
- Add SettingsDialog with theme, FFmpeg, Whisper settings
- Add shadcn components (dialog, tabs, select, input, label)
- Add README.md with installation and usage docs
- Fix AppSettings type consistency

--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "gate:report": "npm run gate 2>&1 | tee /dev/stderr"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@tauri-apps/api": "^2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.58.0",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.2.4",
     "@tauri-apps/cli": "^2",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
