--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,43 @@
+# Dependencies
+node_modules/
+
+# Build outputs
+dist/
+build/
+out/
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
 
-# Tauri
-src-tauri/target
-src-tauri/.cargo
+# Testing
+coverage/
+.nyc_output/
+test-results/
+playwright-report/
+
+# Misc
+*.tsbuildinfo
+.eslintcache
+
+# macOS
+*.DS_Store
+*.app
+*.dmg
