--- a/package.json
+++ b/package.json
@@ -1,52 +1,88 @@
 {
   "name": "clipflow",
+  "productName": "ClipFlow",
   "version": "1.0.0",
   "description": "AI-powered video editor",
-  "type": "module",
+  "main": "dist/electron/main/main.js",
+  "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "dev:tauri": "tauri dev",
-    "build:tauri": "tauri build",
-    "lint": "eslint src --max-warnings=10",
+    "start": "electron-forge start",
+    "dev": "tsc --project tsconfig.electron.json && vite",
+    "dev:electron": "tsc --project tsconfig.electron.json && electron-forge start",
+    "build": "tsc --project tsconfig.json --noEmit && vite build && tsc --project tsconfig.electron.json && cp -r dist/electron/* dist/ && electron-forge package",
+    "lint": "eslint src --max-warnings 0",
+    "lint:fix": "eslint src --fix",
     "test": "vitest run --coverage",
     "test:ui": "vitest",
-    "gate": "npm run lint && npm run build && npm run test",
-    "gate:report": "npm run gate 2>&1 | tee /dev/stderr"
+    "test:e2e": "playwright test",
+    "gate": "npm run lint && npm run build && npm run test && npm run test:e2e",
+    "test:gate": "npm run lint && npm run build && npm run test && npm run test:e2e",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "publish": "electron-forge publish",
+    "build:mac": "npm run build -- --mac",
+    "build:win": "npm run build -- --win",
+    "build:linux": "npm run build -- --linux",
+    "build:all": "npm run build:mac && npm run build:win && npm run build:linux"
   },
+  "keywords": [
+    "video",
+    "editor",
+    "ffmpeg",
+    "electron"
+  ],
+  "author": {
+    "name": "Tendies",
+    "email": "jean_lucc@hotmail.com"
+  },
+  "license": "MIT",
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
-    "@tauri-apps/api": "^2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@playwright/test": "^1.58.0",
-    "@radix-ui/react-slot": "^1.2.4",
-    "@tauri-apps/cli": "^2",
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.2",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@vitejs/plugin-react": "^4.2.0",
-    "@vitest/coverage-v8": "^4.0.18",
-    "@vitest/ui": "^4.0.18",
-    "autoprefixer": "^10.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "jsdom": "^27.4.0",
+    "electron-squirrel-startup": "^1.0.1",
+    "electron-updater": "^6.7.3",
+    "fluent-ffmpeg": "^2.1.3",
     "lucide-react": "^0.344.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.2.0"
+  },
+  "devDependencies": {
+    "@electron-forge/cli": "^7.11.1",
+    "@electron-forge/maker-deb": "^7.11.1",
+    "@electron-forge/maker-rpm": "^7.11.1",
+    "@electron-forge/maker-squirrel": "^7.11.1",
+    "@electron-forge/maker-zip": "^7.11.1",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.11.1",
+    "@electron-forge/plugin-fuses": "^7.11.1",
+    "@electron/fuses": "^1.8.0",
+    "@eslint/js": "^9.39.2",
+    "@playwright/test": "^1.58.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@types/fluent-ffmpeg": "^2.1.27",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/coverage-v8": "^4.0.0",
+    "autoprefixer": "^10.4.0",
+    "electron": "40.1.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "jsdom": "^27.4.0",
     "postcss": "^8.4.0",
-    "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.54.0",
     "vite": "^5.0.0",
-    "vitest": "^4.0.18"
+    "vitest": "^4.0.0"
   }
 }
