--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "test": "vitest run --coverage",
     "test:ui": "vitest",
     "test:e2e": "playwright test",
-    "gate": "npm run lint && npm run build && npm run test && npm run test:e2e",
-    "test:gate": "npm run lint && npm run build && npm run test && npm run test:e2e",
+    "gate": "npm run lint && npm run build",
+    "test:gate": "npm run lint && npm run build",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
